Added game link

--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -1,11 +1,8 @@
-<h1 id="counter"></h1>
-<hr>
+<h1 id="counter"></h1><hr>
 
-<img id='game_image' alt='No Image' />
-<hr>
+<img id='game_image' alt='No Image' /><hr>
 
-<button onclick="addImage()">Add</button>
-<hr>
+<button onclick="addImage()">Add</button><hr>
 
 <table border="1" id="play">
   <tr>
@@ -19,7 +16,6 @@
     </tr>
   <% end %>
 </table>
-
 
 <script type="text/javascript">
   let counter = 10
